Feat(ValidateToken): add proccess ia_memory and validate token
